--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia quidem non, laboriosam eaque perferendis voluptatem nulla repellendus reprehenderit impedit similique.</p>
 </body>
 </html>
